--- a/Web/public/css/main.css
+++ b/Web/public/css/main.css
@@ -5,8 +5,10 @@ html{
     font-family: Montserrat;
 }
 main{
+    margin-top: 2.5%;
     margin-left: 2.5%;
     margin-right: 2.5%;
+    margin-bottom: 2.5%;
 }
 .display-4{
     font-weight: bolder;
